fixed image sizing on smaller devices

--- a/css/codepad.css
+++ b/css/codepad.css
@@ -135,6 +135,10 @@ div.chat_update {
 	#editor {
 		height: 50vh;
 	}
+
+	.homepage-image {
+		width: 70%;
+	}
 }
 
 a.no-underline:hover {
